fix: fix question-divider not showing after deleting useless div

--- a/src/components/Quiz.css
+++ b/src/components/Quiz.css
@@ -6,7 +6,7 @@
 }
 
 .question-divider {
-  margin-top: 5px;
+  width: 100%;
   border: none;
   border-bottom: 1px solid #DBDEF0;
 }
